--- a/css/main.css
+++ b/css/main.css
@@ -44,12 +44,11 @@ p {
 .contentbox {
 /*        float:left; */
         background:#f7f7f7;
-        margin:0;
-        min-width: 234px;
-        max-width: 1200px;
-/*        width: 46%; */
-        min-height:172px;
-        margin:20px;
+/*        min-width: 234px;
+        max-width: 598px; */
+/*        width: 46%; 
+        min-height:172px; */
+        margin:10px;
         border-color: #0081C6;
         border-width: 1px;
         border-left-style: solid;
@@ -60,28 +59,9 @@ p {
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
         box-shadow: 2px 2px 10px #5E5F61;
+	overflow: auto;
+/*	-webkit-overflow-scrolling: touch; */
 }
-.contentboxpeter {
-/*        float:left; */
-        background:#f7f7f7;
-        margin:0;
-        min-width: 234px;
-        max-width: 1024px;
-/*        width: 46%; */
-        min-height:172px;
-        margin:100px;
-        border-color: #0081C6;
-        border-width: 1px;
-        border-left-style: solid;
-        border-right-style: solid;
-        border-bottom-style: solid;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        box-shadow: 2px 2px 10px #5E5F61;
-}
-
 
 .wide {
 /*        min-width: 800px; */
@@ -106,14 +86,15 @@ p {
         background: #0081C6;
         color: #ffffff;
         padding 15px;
-        height: 50px;
-        line-height: 50px;
+        height: 35px;
+        line-height: 35px;
         text-align: center;
         text-decoration: none;
         vertical-align: middle;
         margin: 0;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
+	font-size: 1.2em;
 }
 
 .contentbox h2 a {
@@ -132,7 +113,7 @@ p {
 }
 
 .contentbox .content ul {
-        list-style: yes;
+        list-style: none;
         padding-left: 2px;
 }
 
@@ -166,15 +147,32 @@ p {
 }
 
 .contentbox .content tr:hover {
-	background-color: #e2e2ff;
+	background-color: #ceeeff;
 }
+
+.contentbox .content table input:disabled {
+	background-color: inherit;
+	border-width: 0px;
+	color: inherit;
+}
+.contentbox .content table select:disabled {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	text-indent: 1px;
+	text-overflow: '';
+	background-color: inherit;
+	border-width: 0px;
+	color: inherit;
+}
+
 .dashbox {
 /*        float:left; */
+	font-size: 0.8em;
 	color:white;
         margin:0;
-        width:96px;
-        min-width:96px;
-	height:96px;
+        width:110px;
+        min-width:90px;
+	height:110px;
         margin:2px;
 	padding:5px;
         border-width: 1px;
@@ -199,15 +197,16 @@ p {
 }
 
 .db2w {
-        width:208px;
-        min-width:208px;
+        width:196px;
+        min-width:196px;
 }
 
 .db2h {
-        height:208px;
+        height:196px;
 }
 
 .dashbox h3 {
+/*	font-size: 1em; */
 	margin-top: 2px;
 	margin-bottom: 2px;
 	overflow-wrap: break-word;
@@ -217,6 +216,10 @@ p {
 
 a.dashbox {
 	text-decoration: none;
+}
+
+.count {
+	font-size: 1.8em;
 }
 
 .button {
@@ -237,6 +240,8 @@ a.dashbox {
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
         box-shadow: 1px 1px 3px #5E5F61;
+        border-width: 1px;
+        border-style: solid;
 }
 
 .button:hover, .button:focus {
@@ -327,18 +332,16 @@ button {
 }
 
 .warning {
-        background: yellow!important;
-        color: #000;
+	color: #B66300!important;
 }
 
 .bad {
-        background: #ed1c24!important;
-        color: #ffffff;
+	color: #ed1c24!important;
 }
 
 .critical {
-        background: #000!important;
-        color: #ffffff;
+	color: white;
+	background: black;
 }
 
 .good {
